--- a/_materials/javatutorial/exercicis/index.html
+++ b/_materials/javatutorial/exercicis/index.html
@@ -293,7 +293,7 @@
                 <p>Suma al campo <w>distancia</w> el campo <w>velocidad</w>.</p>
             </li>
         </ul>
-        <p>Coche</p>
+        <p>Carrera</p>
         <ul>
             <li>
                 <p><w>Carrera(int distancia)</w>:</p>
