--- a/_materials/javatutorial/exercicis/index.html
+++ b/_materials/javatutorial/exercicis/index.html
@@ -302,7 +302,7 @@
             </li>
             <li>
                 <p><w>Coche primeraPosicion()</w>:</p>
-                <p>Devuelve un <w>Coche</w> que tenga el máximo valor en el campo <w>distancia</w>.</p>
+                <p>Devuelve un <w>Coche</w> de la lista <w>coches</w> que tenga el máximo valor en el campo <w>distancia</w>.</p>
             </li>
             <li>
                 <p><w>void inscribir(Coche coche)</w>:</p>
