--- a/_materials/javatutorial/exercicis/index.html
+++ b/_materials/javatutorial/exercicis/index.html
@@ -286,7 +286,7 @@
             <li>
                 <p><w>void acelerar(int velocidad)</w>:</p>
                 <p>Suma a la <w>velocidad</w> del coche el valor pasado por parámetro.</p>
-                <p>Se debe asegurar que la velocidad no queda inferior a 1 ni superior a <w>maxVelocidad</w>.</p>
+                <p><strong>Se debe asegurar que la velocidad no queda inferior a 1 ni superior a <w>maxVelocidad</w></strong>.</p>
             </li>
             <li>
                 <p><w>void mover()</w>:</p>
