--- a/_materials/javatutorial/exercicis/index.html
+++ b/_materials/javatutorial/exercicis/index.html
@@ -395,7 +395,7 @@
 
         <div class="mermaid" style="display: flex; justify-content: center; align-items: center; border: 1px solid #81B1DB; border-radius: 8px;">
             ---
-            title: Workers
+            title: Animals
             ---
             classDiagram
             Empleado <|-- Directivo
