--- a/_materials/javatutorial/index.html
+++ b/_materials/javatutorial/index.html
@@ -62,20 +62,21 @@
 <div>
 
     <ul>
-        <li><a href="1">Literals i System.out.println</a></li>
-        <li><a href="2">Variables i Scanner</a></li>
+        <li><a href="1">Literals, System.out.println</a></li>
+        <li><a href="2">Variables, Scanner</a></li>
         <li><a href="3">Operadors</a></li>
         <li><a href="4">Conversió de tipus</a></li>
-        <li><a href="5">if i switch</a></li>
+        <li><a href="5">if, switch</a></li>
         <li><a href="6">for, while, do-while</a></li>
-        <li><a href="7">break i continue</a></li>
+        <li><a href="7">break, continue</a></li>
         <li><a href="8">Arrays</a></li>
         <li><a href="9">Classes i objectes</a></li>
         <li><a href="10">Mètodes</a></li>
-        <li><a href="11">Mètode constructor, this i static</a></li>
+        <li><a href="11">Mètode constructor, this, static</a></li>
         <li><a href="12">ArrayList</a></li>
         <li><a href="13">Interfaces</a></li>
         <li><a href="14">Herència</a></li>
+        <li><a href="15">Excepcions</a></li>
     </ul>
     <challenge>
         <p>Per fer els exercicis és necessari inscriure's prèviament en aquest <em>contest</em> de Hackerrank:</p>
