--- a/_materials/patterns/a/index.html
+++ b/_materials/patterns/a/index.html
@@ -559,6 +559,13 @@
         <work>
             <h3>Termostato</h3>
 
+            <p>Un termostato abre o cierra un circuito electrico en función de la temperatura.</p>
+            <p>En el siguiente programa, el termómetro mide periódicamente la temperatura y la
+                debe notificar a los termostatos.  
+            </p>
+            <p>Los termostatos abren el "aire acondicionado" cuando la temperatura supera el 
+                máximo que tienen definido.
+            </p>
             <sc java>
                 import java.util.concurrent.ThreadLocalRandom;
 
