--- a/_materials/patterns/index.html
+++ b/_materials/patterns/index.html
@@ -514,6 +514,7 @@
 
 <section>
     <h2>Singleton</h2>
+    <a href="https://java-design-patterns.com/patterns/singleton/">https://java-design-patterns.com/patterns/singleton/</a>
     <p>Sirve para asegurar que solo se pueda instanciar un único objeto de una clase, proporcionando una forma de acceder a él.</p>
     <p>Hay diversas formas de implementar este patrón; distinguiremos 3:</p>
 
@@ -599,7 +600,7 @@
     </sc>
     
     <observe>
-        <p>- Objeto Runtime</p>
+        <p>- El objeto Runtime permite, entre otras cosas, ejecutar otras aplicaciones del sistema operativo:</p>
         <scfile><a href="https://github.com/openjdk/jdk11u/blob/73eef16128417f4a489c4dde47383bb4a00f39d4/src/java.base/share/classes/java/lang/Runtime.java">Runtime</a></scfile>
         <sc java>
             Runtime.getRuntime();
