--- a/_materials/patterns/a/index.html
+++ b/_materials/patterns/a/index.html
@@ -822,7 +822,7 @@
 
             public class Main {
                 public static void main(String[] args) throws InterruptedException {
-                    PrinterSpoolerN printerSpooler = new PrinterSpooler();
+                    PrinterSpooler printerSpooler = new PrinterSpooler();
             
                     List&lt;Callable&lt;Void&gt;&gt; printOrders = new ArrayList&lt;&gt;();
                     for (int i = 1; i &lt;= 10; i++) {
