--- a/_materials/javatutorial/3/index.html
+++ b/_materials/javatutorial/3/index.html
@@ -49,7 +49,7 @@
     </ul>
 
     <p>En aquest exemple s'imprimeixen el resultat d'aquestes operacions 
-        aritmètiques amb operadors enters:</p>
+        aritmètiques amb operands enters:</p>
     <sc java>
         System.out.println(5 + 10);  // 15
 
@@ -87,10 +87,10 @@
         System.out.println(-(10 + 4)); // -14
     </sc>
 
-    <h3>Tipus dels operadors</h3>
-    <p>El resultat d'una expressió artimètica depèn també del tipus dels seus operadors (<w>int</w> o <w>float</w>).</p>
+    <h3>Tipus dels operands</h3>
+    <p>El resultat d'una expressió artimètica depèn també del tipus dels seus operands (<w>int</w> o <w>float</w>).</p>
 
-    <p>Si una operació es realitza amb operadors <w>int</w> el resultat serà de tipus <w>int</w>, però 
+    <p>Si una operació es realitza amb operands <w>int</w> el resultat serà de tipus <w>int</w>, però 
     si en una operació al menys un operand és <w>float</w> el resultat serà de tipus <w>float</w>.</p>
     
     <p>Aquesta regla és especialment important en les divisions, ja que una operació de divisió entre operands 
